# trace_rai

./: .gitignore  README.md  pyproject.toml  test_package.py
cookbook/: submit_trace_metrics.py
examples/: pipeline.yaml
examples/APIs_QuickStart/: DeepEval.ipynb  Evidently.ipynb  Opik.ipynb
src/rai_trace/: __init__.py  client.py  validation.py
src/rai_trace/docs/QuickStart/: DeepEval.ipynb
src/rai_trace/plugins/: sample.py
src/rai_trace/providers/deepeval/: __init__.py  api.py  keys.py
src/rai_trace/providers/evidently/: __init__.py  api.py  keys.py
src/rai_trace/providers/opik/: api.py  keys.py
src/rai_trace/providers/predictive/: api.py
src/trace/: __init__.py
src/trace/docs/Quickstart/: Evidently.ipynb  Opik.ipynb
src/trace/docs/Tutorials/.deepeval/: .deepeval_telemetry.txt
src/trace_rai/: client.py
src/trace_rai/providers/deepeval/: keys.py
src/trace_rai/providers/evidently/: api.py
src/trace_rai/providers/opik/: api.py  keys.py
src/trace_rai/providers/predictive/: api.py  keys.py
