[project]
name = "rai_trace"
version = "0.1.0"
description = "A comprehensive tracing and monitoring library for ML/AI applications"
authors = []
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rai_trace"]
