[project]
name = "trace_rai"
version = "0.1.0"
description = "A comprehensive tracing and monitoring library for ML/AI applications"
authors = []
dependencies = [
    "requests>=2.32.4",
    "pydantic>=2.11.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/trace_rai"]
